# excalidraw-zed-extension

./: .gitignore  .gitmodules  AGENT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  Zed-docs.md
.agent/: settings.local.json
.claude/skills/zed-extension/: SKILL.md
.github/workflows/: release.yml
docs/: CHALLENGES.md  PRD.md
docs/examples/: software-development-lifecycle.excalidraw  system-architecture.excalidraw  user-authentication-flow.excalidraw
extension/: Cargo.toml  extension.toml  extension.wasm
extension/languages/excalidraw/: config.toml
extension/src/: lib.rs
preview-binary/: Cargo.toml  hello.html  package-lock.json  test.excalidraw
preview-binary/assets/: index.html
preview-binary/src/: main.rs
preview-binary/webview-src/: index.html  package-lock.json  package.json  vite.config.ts
preview-binary/webview-src/src/: App.tsx  main.tsx
